--- a/docs/_sass/_forms.scss
+++ b/docs/_sass/_forms.scss
@@ -24,6 +24,7 @@ select {
   padding: 20px; // This vertically centers text on FF, ignored by Webkit
   width: 100%;
   font-size: 1.6rem;
+  font-family: 'Open Sans', sans-serif;
 
   &:focus {
     border-color: $green;
