--- a/docs/_sass/_pages.scss
+++ b/docs/_sass/_pages.scss
@@ -51,4 +51,9 @@
     background-color: $gold;
     padding: 20px;
     font-weight: bold;
+    margin-bottom: 50px;
+}
+
+.standout--secondary {
+    background-color: $green;
 }
