--- a/docs/_sass/_pages.scss
+++ b/docs/_sass/_pages.scss
@@ -50,8 +50,11 @@
 .standout {
     background-color: $gold;
     padding: 20px;
-    font-weight: bold;
     margin-bottom: 50px;
+
+    a {
+        font-weight: bold;
+    }
 }
 
 .standout--secondary {
