--- a/docs/_sass/_homepage.scss
+++ b/docs/_sass/_homepage.scss
@@ -219,3 +219,16 @@
 .callout-link {
     font-weight: bold;
 }
+
+.hours-announcement {
+    width: 100%;
+    margin: 20px 0;
+    padding: 20px;
+    background-color: #fff;
+    font-size: 30px;
+
+    @include mq(lg) {
+        width: 700px;
+        padding: 20px 20px 20px 100px;
+    }
+}
