--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,7 +12,7 @@
     </script>
 
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=yes">
+    <meta name="format-detection" content="telephone=yes"  content="address=yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="{{ page.description }}">
     <title>{{ page.title }}</title>
