--- a/docs/_sass/_homepage.scss
+++ b/docs/_sass/_homepage.scss
@@ -1,3 +1,10 @@
+.alert {
+    padding: 20px;
+    background-color: #f8d7da;
+    color: #721c24;
+    font-weight: bold;
+}
+
 .contact-card {
     background-color: $black;
     font-size: 25px;
