--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -13,4 +13,6 @@
             {% endfor %}
         </ul>
     </nav>
+    
+    <div class="sponsor-side"><img src="{{ site.url }}/assets/images/banshee.png" alt="Banshee Bikes Logo" /></div>
 </header>
