--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -14,5 +14,5 @@
         </ul>
     </nav>
     
-    <div class="sponsor-side"><a href="https://www.bansheebikes.com/"><img src="{{ site.url }}/assets/images/banshee.png" alt="Banshee Bikes Logo" /></a></div>
+    <div class="sponsor-side"><a href="https://www.bansheebikes.com/" target="_blank"><img src="{{ site.url }}/assets/images/banshee.png" alt="Banshee Bikes Logo" /></a></div>
 </header>
