--- a/docs/_sass/_header.scss
+++ b/docs/_sass/_header.scss
@@ -67,7 +67,9 @@
     bottom: 0;
     
     img {
-        max-width: 241px;
+        max-width: 120px;
+        margin-left: 0;
+        margin-right: 0;
         background-color: white;
     }
 }
