--- a/docs/_sass/_header.scss
+++ b/docs/_sass/_header.scss
@@ -67,9 +67,9 @@
     bottom: 0;
     
     img {
-        max-width: 120px;
-        margin-left: 0;
-        margin-right: 0;
+        max-width: 150px;
+        margin-left: auto;
+        margin-right: auto;
         background-color: white;
     }
 }
